fix: alterações feitas da segurança